fix: description in spotlight does not fit to its container

--- a/packages/webapp/src/components/SpotlightList/index.less
+++ b/packages/webapp/src/components/SpotlightList/index.less
@@ -42,8 +42,18 @@
     background-image: ~"url('../../images/default-cover.png')";
   }
 
+  .spotlight-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
   .title {
     font-weight: 300;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
   }
 
   .subtitle {
@@ -66,6 +76,11 @@
   .description {
     margin-top: 10px;
     font-size: 13px;
-    line-height: 1.3;
+    line-height: 1.35;
+    min-height: 0;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    flex: 1;
   }
 }
